# sargs

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
.circleci/: config.yml
example/: CMakeLists.txt  hello.cc  hello.h  long.cc  main.cc  optional.cc  simple.cc
src/: flag_parser.h  sarg.h  sargs.h
test/: CMakeLists.txt  main.cc  optional.cc  simple.cc
